k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scrolller
  namespace: scrolller
  labels:
    app: scrolller
