k8s/scrolller-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrolller-ingress
  namespace: scrolller
  labels:
    app: scrolller
  annotations:
    cert-manager.io/issuer: "scrolller-issuer"
spec:
  tls:
    - hosts:
        - scrolller.vu
        - api.scrolller.vu
      secretName: scrolller-tls-secret
  rules:
    - host: scrolller.vu
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: scrolller-web-service
                port:
                  number: 80
    - host: api.scrolller.vu
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: scrolller-api-service
                port:
                  number: 8080
